--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "ssh://git@github.com/k6io/example-typescript.git",
+  "repository": "ssh://git@github.com/Gpap84/athens_sdet_k6_workshop.git",
   "author": "Simon Aronsson <simme@k6.io>",
   "license": "MIT",
   "devDependencies": {
@@ -12,6 +12,7 @@
     "@babel/preset-env": "7.13.15",
     "@babel/preset-typescript": "7.13.0",
     "@types/k6": "~0.41.0",
+    "@types/node": "^18.14.3",
     "@types/webpack": "5.28.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "4.0.0-alpha.0",
@@ -22,6 +23,6 @@
     "webpack-glob-entries": "^1.0.1"
   },
   "scripts": {
-    "start": "webpack"
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && webpack"
   }
 }
