--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8086:8086"
     environment:
-      - INFLUXDB_DB=k6
+      - INFLUXDB_DB=...
 
   grafana:
     image: grafana/grafana:latest
@@ -31,6 +31,6 @@ services:
     ports:
       - "6565:6565"
     environment:
-      - K6_OUT=influxdb=http://influxdb:8086/k6
+      - K6_OUT=...
     volumes:
       - ./dist:/scripts
